# scripter

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
src/: director.cpp  director.h  lyricist.cpp  lyricist.h  main.cpp  worder.cpp  worder.h
